Added setWarningDisappear method on welcome screen. The wrong password message will now disappear on a mouseclick on the app screen.

--- a/src/education/WelcomeScreen.fxml
+++ b/src/education/WelcomeScreen.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="education.WelcomeScreenController">
     <children>
-      <ImageView fitHeight="727.0" fitWidth="1080.0" layoutY="-7.0">
+      <ImageView fitHeight="727.0" fitWidth="1080.0" layoutY="-7.0" onDragDetected="#makeWarningDisappear" onMouseClicked="#makeWarningDisappear">
          <image>
             <Image url="@Assets/signup.png" />
          </image>
